# quickray

./: LICENSE  README.md  pyproject.toml
assets_src/: icon.xcf
docs/memo/: buildcommand.md
src/quickray/: constants.py  data.py  launcher.py  main.py  settings.py  utils.py
src/quickray/services/: clipboard.py
src/quickray/widgets/: ghost_input.py
tools/: build_icon.py
